Adding a new CMC section to Params.ini

--- a/examples/Params.ini
+++ b/examples/Params.ini
@@ -465,4 +465,40 @@ htpmb = 1
 ; default = 1
 ST_cr = 1
 
-
+[cmc]
+INPUT_FILE = input.hdf5
+CMC_GAMMA = 0.01
+MASS_PC = 0.0001,0.0003,0.0005,0.0007,0.0009,0.001,0.003,0.005,0.007,0.009,0.01,0.03,0.05,0.07,0.09,0.1,0.2,0.3,0.4,0.5,0.6,0.7,0.8,0.9,0.99
+MASS_BINS = 0.1,1.0,10.0,100.0,1000.0
+# additional parameters
+THETASEMAX = 1.4142
+BH_AVEKERNEL = 3
+T_MAX_PHYS = 0.00001
+T_MAX_COUNT = 10000000
+MIN_CHUNK_SIZE = 40
+SS_COLLISION = 1
+STELLAR_EVOLUTION = 1
+BINBIN = 1
+BINSINGLE = 1
+BH_CAPTURE = 1
+THREEBODYBINARIES = 1
+MIN_BINARY_HARDNESS = 5.0
+ONLY_FORM_BH_THREEBODYBINARIES = 1
+IDUM = 1729217
+SNAPSHOTTING = 1
+SNAPSHOT_DELTACOUNT = 100
+WRITE_STELLAR_INFO = 0
+STOPATCORECOLLAPSE = 0
+WRITE_EXTRA_CORE_INFO = 1
+TIDAL_TREATMENT = 0
+WRITE_BH_INFO = 1
+BH_SNAPSHOTTING = 1
+BH_SNAPSHOT_DELTACOUNT = 2000
+#Checkpoint Parameters
+MAX_WCLOCK_TIME=2590000
+CHECKPOINT_INTERVAL=7200
+CHECKPOINTS_TO_KEEP=2
+TERMINAL_ENERGY_DISPLACEMENT=50
+#The TT testing
+USE_TT_FILE=0
+USE_DF_CUTOFF=0
